src/objects/ECO_Delegate_Limit__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Agreement_Amount__c</fullName>
        <label>Agreement Amount &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Amount_lt__c</fullName>
        <label>Agreement Amount &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backlog_Value__c</fullName>
        <label>Backlog Value &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backlog_Value_lt__c</fullName>
        <label>Backlog Value &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Net_Margin_Value__c</fullName>
        <label>Project Net Margin (Value) &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Net_Margin_Value_lt__c</fullName>
        <label>Project Net Margin (Value) &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Net_Margin_age_of_NSR__c</fullName>
        <label>Project Net Margin (%age of NSR) &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Net_Margin_age_of_NSR_lt__c</fullName>
        <label>Project Net Margin (%age of NSR) &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Revenue_Budget__c</fullName>
        <label>Project Revenue Budget &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Revenue_Budget_lt__c</fullName>
        <label>Project Revenue Budget &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Change_In_Forecast_Net_Margin__c</fullName>
        <label>Value Change in Forecast Net Margin &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_change_in_Forecast_Net_Margin_lt__c</fullName>
        <label>Value change in Forecast Net Margin &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>age_Change_in_Forecast_Net_Margin__c</fullName>
        <label>%age Change in Forecast Net Margin &gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>age_Change_in_Forecast_Net_Margin_lt__c</fullName>
        <label>%age Change in Forecast Net Margin &lt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>ECO Delegate Limits</label>
</CustomObject>